// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component exporters > alert -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Alert, AlertTitle, Box } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 400, height: 80 }}>
        <Alert severity="info" sx={{ height: "100%" }}>
          <AlertTitle>Heads up!</AlertTitle>
          You can add components to your layout from the palette.
        </Alert>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > alert -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add alert
 * Dependencies: lucide-react
 */

import { Alert, AlertDescription, AlertTitle } from "@/components/ui/alert";
import { Info } from "lucide-react";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[400px] h-[80px]">
        <Alert className="h-full">
          <Info />
          <AlertTitle>Heads up!</AlertTitle>
          <AlertDescription>
            You can add components to your layout from the palette.
          </AlertDescription>
        </Alert>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > avatar -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Avatar, Box } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 48, height: 48 }}>
        <Avatar sx={{ width: "100%", height: "100%" }}>AB</Avatar>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > avatar -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add avatar
 */

import { Avatar, AvatarFallback } from "@/components/ui/avatar";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[48px] h-[48px]">
        <Avatar className="size-full">
          <AvatarFallback className="rounded-full">AB</AvatarFallback>
        </Avatar>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > badge -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Chip } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 64, height: 24 }}>
        <Chip label="New" size="small" color="primary" />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > badge -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add badge
 */

import { Badge } from "@/components/ui/badge";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[64px] h-[24px]">
        <Badge>New</Badge>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > box -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 240, height: 160 }}>
        <Box
          sx={{
            width: "100%",
            height: "100%",
            borderRadius: 1,
            display: "flex",
            alignItems: "center",
            justifyContent: "center",
            color: "text.secondary",
            border: 1,
            borderColor: "divider",
          }}
        ></Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > box -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 */

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[240px] h-[160px]">
        <div className="flex h-full w-full items-center justify-center rounded-md border text-sm text-muted-foreground"></div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > button -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Button } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 120, height: 40 }}>
        <Button variant="contained" size="medium" fullWidth sx={{ height: "100%" }}>
          Button
        </Button>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > button -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add button
 */

import { Button } from "@/components/ui/button";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[120px] h-[40px]">
        <Button className="h-full w-full">Button</Button>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > card -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Button, Card, CardActions, CardContent, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 320, height: 200 }}>
        <Card sx={{ height: "100%" }}>
          <CardContent>
            <Typography variant="h6" component="div" gutterBottom>
              Card title
            </Typography>
            <Typography variant="body2" color="text.secondary" sx={{ whiteSpace: "pre-line" }}>
              A short description that explains what this card is about.
            </Typography>
          </CardContent>
          <CardActions sx={{ justifyContent: "flex-end" }}>
            <Button size="small" variant="contained">
              Action
            </Button>
          </CardActions>
        </Card>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > card -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add button card
 */

import { Button } from "@/components/ui/button";
import { Card, CardContent, CardFooter, CardHeader, CardTitle } from "@/components/ui/card";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[320px] h-[200px]">
        <Card className="h-full w-full">
          <CardHeader>
            <CardTitle>Card title</CardTitle>
          </CardHeader>
          <CardContent>
            <p className="whitespace-pre-line text-sm text-muted-foreground">
              A short description that explains what this card is about.
            </p>
          </CardContent>
          <CardFooter className="justify-end">
            <Button size="sm">Action</Button>
          </CardFooter>
        </Card>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > checkbox -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Checkbox, FormControlLabel } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 200, height: 24 }}>
        <FormControlLabel control={<Checkbox defaultChecked />} label="Remember me" />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > checkbox -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add checkbox label
 */

import { Checkbox } from "@/components/ui/checkbox";
import { Label } from "@/components/ui/label";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[200px] h-[24px]">
        <div className="flex h-full items-center gap-2">
          <Checkbox id="loginscreen-1" defaultChecked />
          <Label htmlFor="loginscreen-1">Remember me</Label>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > divider -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Divider } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 320, height: 16 }}>
        <Box sx={{ display: "flex", alignItems: "center", height: "100%" }}>
          <Divider sx={{ flex: 1 }}></Divider>
        </Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > divider -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add separator
 */

import { Separator } from "@/components/ui/separator";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[320px] h-[16px]">
        <div className="flex h-full items-center">
          <Separator />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > heading -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 360, height: 48 }}>
        <Typography variant="h4" component="h2">
          Page heading
        </Typography>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > heading -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 */

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[360px] h-[48px]">
        <h2 className="text-3xl font-semibold tracking-tight">Page heading</h2>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > icon -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/icons-material @mui/material
 */

import { Star as StarIcon } from "@mui/icons-material";
import { Box } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 32, height: 32 }}>
        <StarIcon sx={{ width: "100%", height: "100%" }} />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > icon -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Dependencies: lucide-react
 */

import { Star } from "lucide-react";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[32px] h-[32px]">
        <Star className="size-full" />
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > image -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/icons-material @mui/material
 */

import { Image as ImageIcon } from "@mui/icons-material";
import { Box } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 320, height: 200 }}>
        <Box
          sx={{
            position: "relative",
            width: "100%",
            height: "100%",
            bgcolor: "grey.200",
            color: "text.secondary",
            display: "flex",
            alignItems: "center",
            justifyContent: "center",
          }}
        >
          <ImageIcon fontSize="large" />
        </Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > image -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Dependencies: lucide-react
 */

import { ImageIcon } from "lucide-react";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[320px] h-[200px]">
        <div className="relative flex h-full w-full items-center justify-center bg-muted text-muted-foreground">
          <ImageIcon className="size-8" />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > input -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, TextField } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 280, height: 72 }}>
        <TextField id="loginscreen-1" label="Email" placeholder="you@example.com" fullWidth />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > input -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add input label
 */

import { Input } from "@/components/ui/input";
import { Label } from "@/components/ui/label";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[280px] h-[72px]">
        <div className="grid w-full gap-2">
          <Label htmlFor="loginscreen-1">Email</Label>
          <Input id="loginscreen-1" placeholder="you@example.com" />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > link -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Link } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 120, height: 24 }}>
        <Link href="#" underline="always">
          Learn more
        </Link>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > link -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 */

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[120px] h-[24px]">
        <a href="#" className="font-medium text-primary underline-offset-4 underline">
          Learn more
        </a>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > navbar -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { AppBar, Box, Button, Toolbar, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 960, height: 64 }}>
        <AppBar position="static" sx={{ height: "100%", justifyContent: "center" }}>
          <Toolbar sx={{ gap: 2 }}>
            <Typography variant="h6" component="div">
              Brand
            </Typography>
            <Button color="inherit">Home</Button>
            <Button color="inherit">Products</Button>
            <Button color="inherit">Pricing</Button>
            <Button color="inherit">About</Button>
            <Box sx={{ flexGrow: 1 }} />
            <Button color="inherit" variant="outlined">
              Sign in
            </Button>
          </Toolbar>
        </AppBar>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > navbar -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add button
 */

import { Button } from "@/components/ui/button";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[960px] h-[64px]">
        <header className="flex h-full items-center gap-6 border-b bg-background px-6">
          <span className="text-lg font-bold">Brand</span>
          <nav className="flex gap-5 text-sm text-muted-foreground">
            <a href="#" className="hover:text-foreground">
              Home
            </a>
            <a href="#" className="hover:text-foreground">
              Products
            </a>
            <a href="#" className="hover:text-foreground">
              Pricing
            </a>
            <a href="#" className="hover:text-foreground">
              About
            </a>
          </nav>
          <div className="ml-auto flex items-center gap-3">
            <Button size="sm">Sign in</Button>
          </div>
        </header>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > progress -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, LinearProgress, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 280, height: 40 }}>
        <Box sx={{ width: "100%" }}>
          <Box sx={{ display: "flex", justifyContent: "space-between", mb: 1 }}>
            <Typography variant="body2">Uploading</Typography>
            <Typography variant="body2" color="text.secondary">
              60%
            </Typography>
          </Box>
          <LinearProgress variant="determinate" value={60} />
        </Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > progress -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add progress
 */

import { Progress } from "@/components/ui/progress";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[280px] h-[40px]">
        <div className="grid h-full content-center gap-2">
          <div className="flex justify-between text-sm">
            <span className="font-medium">Uploading</span>
            <span className="text-muted-foreground">60%</span>
          </div>
          <Progress value={60} />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > radio -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, FormControl, FormControlLabel, FormLabel, Radio, RadioGroup } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 200, height: 112 }}>
        <FormControl>
          <FormLabel id="loginscreen-1-label">Plan</FormLabel>
          <RadioGroup defaultValue="option-0" aria-labelledby="loginscreen-1-label">
            <FormControlLabel value="option-0" control={<Radio />} label="Free" />
            <FormControlLabel value="option-1" control={<Radio />} label="Pro" />
            <FormControlLabel value="option-2" control={<Radio />} label="Enterprise" />
          </RadioGroup>
        </FormControl>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > radio -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add label radio-group
 */

import { Label } from "@/components/ui/label";
import { RadioGroup, RadioGroupItem } from "@/components/ui/radio-group";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[200px] h-[112px]">
        <div className="grid gap-3">
          <Label>Plan</Label>
          <RadioGroup defaultValue="option-0" className="grid gap-2">
            <div className="flex items-center gap-2">
              <RadioGroupItem value="option-0" id="loginscreen-1-0" />
              <Label htmlFor="loginscreen-1-0">Free</Label>
            </div>
            <div className="flex items-center gap-2">
              <RadioGroupItem value="option-1" id="loginscreen-1-1" />
              <Label htmlFor="loginscreen-1-1">Pro</Label>
            </div>
            <div className="flex items-center gap-2">
              <RadioGroupItem value="option-2" id="loginscreen-1-2" />
              <Label htmlFor="loginscreen-1-2">Enterprise</Label>
            </div>
          </RadioGroup>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > select -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, FormControl, InputLabel, MenuItem, Select } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 280, height: 72 }}>
        <FormControl fullWidth>
          <InputLabel id="loginscreen-1-label">Country</InputLabel>
          <Select labelId="loginscreen-1-label" label="Country" defaultValue="">
            <MenuItem value="Ukraine">Ukraine</MenuItem>
            <MenuItem value="Poland">Poland</MenuItem>
            <MenuItem value="Germany">Germany</MenuItem>
          </Select>
        </FormControl>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > select -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add label select
 */

import { Label } from "@/components/ui/label";
import {
  Select,
  SelectContent,
  SelectItem,
  SelectTrigger,
  SelectValue,
} from "@/components/ui/select";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[280px] h-[72px]">
        <div className="grid w-full gap-2">
          <Label htmlFor="loginscreen-1">Country</Label>
          <Select>
            <SelectTrigger id="loginscreen-1" className="w-full">
              <SelectValue placeholder="Select an option" />
            </SelectTrigger>
            <SelectContent>
              <SelectItem value="Ukraine">Ukraine</SelectItem>
              <SelectItem value="Poland">Poland</SelectItem>
              <SelectItem value="Germany">Germany</SelectItem>
            </SelectContent>
          </Select>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > sidebar -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, List, ListItemButton, ListItemText, ListSubheader, Paper } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 240, height: 480 }}>
        <Paper square sx={{ height: "100%", overflow: "auto" }}>
          <List subheader={<ListSubheader>Menu</ListSubheader>}>
            <ListItemButton selected>
              <ListItemText primary="Dashboard" />
            </ListItemButton>
            <ListItemButton>
              <ListItemText primary="Projects" />
            </ListItemButton>
            <ListItemButton>
              <ListItemText primary="Team" />
            </ListItemButton>
            <ListItemButton>
              <ListItemText primary="Reports" />
            </ListItemButton>
            <ListItemButton>
              <ListItemText primary="Settings" />
            </ListItemButton>
          </List>
        </Paper>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > sidebar -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add button
 */

import { Button } from "@/components/ui/button";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[240px] h-[480px]">
        <aside className="flex h-full flex-col gap-1 border-r bg-muted/40 p-3">
          <p className="px-3 py-2 text-xs font-semibold uppercase text-muted-foreground">Menu</p>
          <Button variant="secondary" className="justify-start">
            Dashboard
          </Button>
          <Button variant="ghost" className="justify-start">
            Projects
          </Button>
          <Button variant="ghost" className="justify-start">
            Team
          </Button>
          <Button variant="ghost" className="justify-start">
            Reports
          </Button>
          <Button variant="ghost" className="justify-start">
            Settings
          </Button>
        </aside>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > slider -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Slider, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 280, height: 48 }}>
        <Box sx={{ width: "100%" }}>
          <Typography gutterBottom>Volume</Typography>
          <Slider defaultValue={40} valueLabelDisplay="auto" />
        </Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > slider -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add slider
 */

import { Slider } from "@/components/ui/slider";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[280px] h-[48px]">
        <div className="grid h-full content-center gap-3">
          <div className="flex justify-between text-sm">
            <span className="font-medium">Volume</span>
            <span className="text-muted-foreground">40</span>
          </div>
          <Slider defaultValue={[40]} max={100} step={1} />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > switch -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, FormControlLabel, Switch } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 200, height: 28 }}>
        <FormControlLabel control={<Switch defaultChecked />} label="Notifications" />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > switch -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add label switch
 */

import { Label } from "@/components/ui/label";
import { Switch } from "@/components/ui/switch";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[200px] h-[28px]">
        <div className="flex h-full items-center gap-2">
          <Switch id="loginscreen-1" defaultChecked />
          <Label htmlFor="loginscreen-1">Notifications</Label>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > table -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import {
  Box,
  Paper,
  Table,
  TableBody,
  TableCell,
  TableContainer,
  TableHead,
  TableRow,
} from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 560, height: 180 }}>
        <TableContainer component={Paper} sx={{ height: "100%" }}>
          <Table size="small">
            <TableHead>
              <TableRow>
                <TableCell>Name</TableCell>
                <TableCell>Status</TableCell>
                <TableCell>Role</TableCell>
              </TableRow>
            </TableHead>
            <TableBody>
              <TableRow>
                <TableCell>Alice Smith</TableCell>
                <TableCell>Active</TableCell>
                <TableCell>Admin</TableCell>
              </TableRow>
              <TableRow>
                <TableCell>Bob Johnson</TableCell>
                <TableCell>Invited</TableCell>
                <TableCell>Editor</TableCell>
              </TableRow>
              <TableRow>
                <TableCell>Carol White</TableCell>
                <TableCell>Inactive</TableCell>
                <TableCell>Viewer</TableCell>
              </TableRow>
            </TableBody>
          </Table>
        </TableContainer>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > table -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add table
 */

import {
  Table,
  TableBody,
  TableCell,
  TableHead,
  TableHeader,
  TableRow,
} from "@/components/ui/table";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[560px] h-[180px]">
        <div className="h-full w-full overflow-hidden rounded-md border">
          <Table>
            <TableHeader>
              <TableRow>
                <TableHead>Name</TableHead>
                <TableHead>Status</TableHead>
                <TableHead>Role</TableHead>
              </TableRow>
            </TableHeader>
            <TableBody>
              <TableRow>
                <TableCell>Alice Smith</TableCell>
                <TableCell>Active</TableCell>
                <TableCell>Admin</TableCell>
              </TableRow>
              <TableRow>
                <TableCell>Bob Johnson</TableCell>
                <TableCell>Invited</TableCell>
                <TableCell>Editor</TableCell>
              </TableRow>
              <TableRow>
                <TableCell>Carol White</TableCell>
                <TableCell>Inactive</TableCell>
                <TableCell>Viewer</TableCell>
              </TableRow>
            </TableBody>
          </Table>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > tabs -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Tab, Tabs, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 400, height: 160 }}>
        <Box sx={{ width: "100%", height: "100%" }}>
          <Box sx={{ borderBottom: 1, borderColor: "divider" }}>
            <Tabs value={0}>
              <Tab label="Account" />
              <Tab label="Password" />
              <Tab label="Billing" />
            </Tabs>
          </Box>
          <Typography sx={{ p: 2, whiteSpace: "pre-line" }}>Tab content goes here.</Typography>
        </Box>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > tabs -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add tabs
 */

import { Tabs, TabsContent, TabsList, TabsTrigger } from "@/components/ui/tabs";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[400px] h-[160px]">
        <Tabs defaultValue="tab-0" className="h-full w-full">
          <TabsList>
            <TabsTrigger value="tab-0">Account</TabsTrigger>
            <TabsTrigger value="tab-1">Password</TabsTrigger>
            <TabsTrigger value="tab-2">Billing</TabsTrigger>
          </TabsList>
          <TabsContent value="tab-0" className="whitespace-pre-line text-sm">
            Tab content goes here.
          </TabsContent>
        </Tabs>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > text -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, Typography } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 360, height: 60 }}>
        <Typography variant="body1" sx={{ whiteSpace: "pre-line" }}>
          This is a paragraph of text. Select it and edit the content in the Inspector.
        </Typography>
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > text -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 */

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[360px] h-[60px]">
        <p className="whitespace-pre-line leading-7 text-base">
          This is a paragraph of text. Select it and edit the content in the Inspector.
        </p>
      </div>
    </div>
  );
}
"
`;

exports[`component exporters > textarea -> mui 1`] = `
"/**
 * Generated by Polyframe: MUI, absolute layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import { Box, TextField } from "@mui/material";

export default function LoginScreen() {
  return (
    <Box
      sx={{
        position: "relative",
        width: 1440,
        height: 1024,
        overflow: "hidden",
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ position: "absolute", left: 10, top: 20, width: 320, height: 140 }}>
        <TextField
          id="loginscreen-1"
          label="Message"
          placeholder="Type your message..."
          multiline
          rows={4}
          fullWidth
        />
      </Box>
    </Box>
  );
}
"
`;

exports[`component exporters > textarea -> shadcn 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, absolute layout.
 * Install: npx shadcn@latest add label textarea
 */

import { Label } from "@/components/ui/label";
import { Textarea } from "@/components/ui/textarea";

export default function LoginScreen() {
  return (
    <div className="relative w-[1440px] h-[1024px] overflow-hidden bg-background text-foreground">
      <div className="absolute left-[10px] top-[20px] w-[320px] h-[140px]">
        <div className="flex h-full w-full flex-col gap-2">
          <Label htmlFor="loginscreen-1">Message</Label>
          <Textarea id="loginscreen-1" className="flex-1" placeholder="Type your message..." />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`project generation > snapshots a stacked login screen 1`] = `
"/**
 * Generated by Polyframe: shadcn/ui + Tailwind, stacked layout.
 * Install: npx shadcn@latest add button card checkbox input label
 */

import { Button } from "@/components/ui/button";
import { Card } from "@/components/ui/card";
import { Checkbox } from "@/components/ui/checkbox";
import { Input } from "@/components/ui/input";
import { Label } from "@/components/ui/label";

export default function Login() {
  return (
    <div className="flex w-[1280px] min-h-[800px] flex-col bg-background text-foreground">
      <div className="flex items-start mt-[160px]">
        <div className="relative shrink-0 ml-[440px] w-[400px] min-h-[460px]">
          <div className="absolute inset-0">
            <Card className="h-full w-full"></Card>
          </div>
          <div className="relative flex flex-col">
            <div className="flex items-start mt-[40px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[40px]">
                <h3 className="text-2xl font-semibold tracking-tight text-center">Welcome back</h3>
              </div>
            </div>
            <div className="flex items-start mt-[4px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[24px]">
                <p className="whitespace-pre-line leading-7 text-sm text-muted-foreground text-center">
                  Sign in to your account
                </p>
              </div>
            </div>
            <div className="flex items-start mt-[24px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[64px]">
                <div className="grid w-full gap-2">
                  <Label htmlFor="login-4">Email</Label>
                  <Input id="login-4" placeholder="you@example.com" />
                </div>
              </div>
            </div>
            <div className="flex items-start mt-[16px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[64px]">
                <div className="grid w-full gap-2">
                  <Label htmlFor="login-5">Password</Label>
                  <Input id="login-5" placeholder="••••••••" />
                </div>
              </div>
            </div>
            <div className="flex items-start mt-[16px]">
              <div className="shrink-0 ml-[40px] w-[160px] h-[24px]">
                <div className="flex h-full items-center gap-2">
                  <Checkbox id="login-6" defaultChecked />
                  <Label htmlFor="login-6">Remember me</Label>
                </div>
              </div>
              <div className="shrink-0 ml-[24px] w-[136px] h-[24px]">
                <a href="#" className="font-medium text-primary underline-offset-4 hover:underline">
                  Forgot password?
                </a>
              </div>
            </div>
            <div className="flex items-start mt-[24px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[40px]">
                <Button className="h-full w-full">Sign in</Button>
              </div>
            </div>
            <div className="flex items-start mt-[24px]">
              <div className="shrink-0 ml-[40px] w-[320px] h-[24px]">
                <p className="whitespace-pre-line leading-7 text-sm text-muted-foreground text-center">
                  No account yet? Sign up
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`project generation > snapshots a stacked login screen 2`] = `
"/**
 * Generated by Polyframe: MUI, stacked layout.
 * Dependencies: @emotion/react @emotion/styled @mui/material
 */

import {
  Box,
  Button,
  Card,
  CardContent,
  Checkbox,
  FormControlLabel,
  Link,
  TextField,
  Typography,
} from "@mui/material";

export default function Login() {
  return (
    <Box
      sx={{
        display: "flex",
        flexDirection: "column",
        width: 1280,
        minHeight: 800,
        bgcolor: "background.paper",
      }}
    >
      <Box sx={{ display: "flex", alignItems: "flex-start", mt: "160px" }}>
        <Box sx={{ position: "relative", flexShrink: 0, ml: "440px", width: 400, minHeight: 460 }}>
          <Box sx={{ position: "absolute", inset: 0 }}>
            <Card sx={{ height: "100%" }}>
              <CardContent></CardContent>
            </Card>
          </Box>
          <Box sx={{ position: "relative", display: "flex", flexDirection: "column" }}>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "40px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 40 }}>
                <Typography variant="h5" component="h3" align="center">
                  Welcome back
                </Typography>
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "4px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 24 }}>
                <Typography
                  variant="body2"
                  color="text.secondary"
                  align="center"
                  sx={{ whiteSpace: "pre-line" }}
                >
                  Sign in to your account
                </Typography>
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "24px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 64 }}>
                <TextField id="login-4" label="Email" placeholder="you@example.com" fullWidth />
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "16px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 64 }}>
                <TextField id="login-5" label="Password" placeholder="••••••••" fullWidth />
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "16px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 160, height: 24 }}>
                <FormControlLabel control={<Checkbox defaultChecked />} label="Remember me" />
              </Box>
              <Box sx={{ flexShrink: 0, ml: "24px", width: 136, height: 24 }}>
                <Link href="#" underline="hover">
                  Forgot password?
                </Link>
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "24px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 40 }}>
                <Button variant="contained" size="medium" fullWidth sx={{ height: "100%" }}>
                  Sign in
                </Button>
              </Box>
            </Box>
            <Box sx={{ display: "flex", alignItems: "flex-start", mt: "24px" }}>
              <Box sx={{ flexShrink: 0, ml: "40px", width: 320, height: 24 }}>
                <Typography
                  variant="body2"
                  color="text.secondary"
                  align="center"
                  sx={{ whiteSpace: "pre-line" }}
                >
                  No account yet? Sign up
                </Typography>
              </Box>
            </Box>
          </Box>
        </Box>
      </Box>
    </Box>
  );
}
"
`;
